tests/NormalTests/paczka1/small_fuzzy/23204555.err
Error in line 5: yP7Qh5e51 S514 47,2
Error in line 2: 6TZ4LUiE A368 77,1
